--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="club">Club</string>
     <string name="logout">Logout </string>
     <string name="pemain">Pemain</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
